objects/CR_Question__c.object
<CustomObject>
    <fields>
        <fullName>Condition_Report_Prescreen__c</fullName>
        <label>Condition Report Prescreen</label>
        <referenceTo>Condition_Report_Prescreen__c</referenceTo>
        <relationshipLabel>CR Questions</relationshipLabel>
        <relationshipName>CR_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Arbitration team to review of Auxiliary questions</description>
        <label>Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Question_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both Fog Lamps</fullName>
                </value>
                <value>
                    <fullName>Both Headlamps</fullName>
                </value>
                <value>
                    <fullName>Both Tail Lights</fullName>
                </value>
                <value>
                    <fullName>Center Front</fullName>
                </value>
                <value>
                    <fullName>Center Rear</fullName>
                </value>
                <value>
                    <fullName>Convertible Top</fullName>
                </value>
                <value>
                    <fullName>Driver Fender</fullName>
                </value>
                <value>
                    <fullName>Driver Fog Lamp</fullName>
                </value>
                <value>
                    <fullName>Driver Front Door</fullName>
                </value>
                <value>
                    <fullName>Driver Headlamp</fullName>
                </value>
                <value>
                    <fullName>Driver Rear Door</fullName>
                </value>
                <value>
                    <fullName>Driver Rear Quarter Panel</fullName>
                </value>
                <value>
                    <fullName>Driver Rocker</fullName>
                </value>
                <value>
                    <fullName>Driver Tail Light</fullName>
                </value>
                <value>
                    <fullName>Front Bumper</fullName>
                </value>
                <value>
                    <fullName>Front Windshield</fullName>
                </value>
                <value>
                    <fullName>Hood</fullName>
                </value>
                <value>
                    <fullName>Left Fog Light</fullName>
                </value>
                <value>
                    <fullName>Left Front</fullName>
                </value>
                <value>
                    <fullName>Left Front Door</fullName>
                </value>
                <value>
                    <fullName>Left Headlight</fullName>
                </value>
                <value>
                    <fullName>Left Rear</fullName>
                </value>
                <value>
                    <fullName>Left Rear Door</fullName>
                </value>
                <value>
                    <fullName>Marker Light</fullName>
                </value>
                <value>
                    <fullName>Missing parking sensors</fullName>
                </value>
                <value>
                    <fullName>Missing tow hook cover(s)</fullName>
                </value>
                <value>
                    <fullName>Moon Roof</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Passenger Fender</fullName>
                </value>
                <value>
                    <fullName>Passenger Fog Lamp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Notes_Photos__c</fullName>
        <label>Question Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question_Sub_Type__c</fullName>
        <label>Question Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Question_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Question_Sub_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Question_Type</valueSetName>
        </valueSet>
    </fields>
    <label>CR Question</label>
    <nameField>
        <displayFormat>CRQ-{0000}</displayFormat>
        <label>CR Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CR Questions</pluralLabel>
    <recordTypes>
        <fullName>Auxiliary</fullName>
        <active>true</active>
        <description>Questions strictly for Auxiliary team Action</description>
        <label>Auxiliary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>